--- a/css/style.css
+++ b/css/style.css
@@ -18,59 +18,99 @@ body {
     overflow-wrap: break-word;
 }
 .row{
-   
-
     width: 100%;
 }
-.col1{
+.mytab{
+    background-color:rgb(31, 31, 39) ;
+    color: #fff;
     position: absolute;
     top: 14px;
     right: 8px;
     position: relative;
     width: 100%;
-    border: 1px solid #fff;
-    box-shadow: 5px 5px #000;
-    border-radius: 5px;
-    padding: 5px;
-    transition: 0.08s ease all;
-    border-radius: 7px;
-    background-color: #fff;
-}
-.col2{
-    position: absolute;
-    top: 14px;
-    right: 8px;
-    position: relative;
-    width: 100%;
-    border: 1px solid #000;
+    border: 2px solid #000;
     box-shadow: 5px 5px #000;
     border-radius: 5px;
     padding: 5px;
     transition: 0.08s ease all;
     border-radius: 7px ;
- padding: 0 !important;
- 
+    padding: 0 !important;
     overflow: hidden;
 }
-.n1{
+.mycontent{
     margin: 0 !important;
-    background-color:rgb(73, 63, 114);
     color: #fff;
-
+}
+.list-group-item{
+    color: #000 !important;
+    border: 1px solid #fff;
+    box-shadow: 5px 5px #000;
+    border-radius: 7px;
+    padding: 5px !important;
+    margin-bottom: 20px;
+}
+.list-group-item.active {
+    background-color: #777 !important;
+    border-color:#000 !important ;
+}
+.list-group-item:hover{
+    background-color: #bbb !important;
+}
+input{
+    background-color:#eee;
+    border-radius: 4px;
+    box-shadow: 4px 4px #000;
+    position: relative;
+    border: 1px solid #000;
+}
+.profile-card {
+/*     width: 70%;
+ */    background: rgb(31, 28, 28);
+    padding: 15px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px #fff;
+  }
+  .profile-pic-wrapper {
+/*     width: 60%;
+ */    position: relative;
+    margin: 0 auto 10px;
+  }
+  .profile-pic-wrapper img {
     width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .edit-icon {
+    position: absolute;
+    bottom: 8px;
+    right: 10px;
+    background-color: #333;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    border: 1px solid white;
+  }
+  .edit-icon i{
+    color: #fff;
+  }
+  .profile-name {
+    font-weight: bold;
 }
-.n2{margin: 0 !important;
-    color: aliceblue;
-
-  
-    width: 100%;
+  .profile-role {
+    color: #666;
 }
-.m2{
-    background-color:rgb(151, 33, 147);
- 
- 
+  ::-webkit-scrollbar {
+    width: 10px;
 }
-.m3{
-    background-color:rgb(48, 8, 73);
-  
+::-webkit-scrollbar-track {
+    background: #f0f0f0;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
