--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     justify-content: center;
 }
-.container {
+body>.container {
     height: 90%;
     width: 80%;
     justify-items: center;
@@ -56,35 +56,63 @@ body {
 .list-group-item:hover{
     background-color: #bbb !important;
 }
+.form-group {
+  position: relative;
+}
 input{
+    position: absolute;
+    position: relative;
+    top: 14px;
+    right: 8px;
+    width: 100%;
     background-color:#eee;
     border-radius: 4px;
     box-shadow: 4px 4px #000;
-    position: relative;
     border: 1px solid #000;
+    padding: 4px;
 }
+label{
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  background-color: #eee;
+  padding: 0 4px;
+  font-size: 16px;
+  color: #777;
+  pointer-events: none;
+  transition: 0.08s ease all;
+  z-index: 1;
+}
+input:focus + label,
+input:not(:placeholder-shown) + label {
+    top: 2px;
+    right: 18px;
+    font-size: 12px;
+    color: #fff;
+    border-radius: 4px;
+    background-color:rgb(31, 31, 39);
+  }
 .profile-card {
 /*     width: 70%;
- */    background: rgb(31, 28, 28);
+ */ background: rgb(31, 28, 28);
     padding: 15px;
     border-radius: 12px;
     box-shadow: 0 0 10px #fff;
   }
   .profile-pic-wrapper {
-/*     width: 60%;
- */    position: relative;
+    position: relative;
     margin: 0 auto 10px;
   }
   .profile-pic-wrapper img {
-    width: 100%;
-    height: 100%;
+    width: 130px;
+    height: 130px;
     border-radius: 50%;
     object-fit: cover;
   }
   .edit-icon {
     position: absolute;
-    bottom: 8px;
-    right: 10px;
+    bottom:0px;
+    right: 18px;
     background-color: #333;
     color: white;
     border-radius: 50%;
@@ -96,9 +124,11 @@ input{
   }
   .profile-name {
     font-weight: bold;
+    font-size: clamp(9px,1.5vw,20px);
 }
   .profile-role {
     color: #666;
+    font-size: clamp(9px,1vw,18px);
 }
   ::-webkit-scrollbar {
     width: 10px;
