--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,29 @@
+@font-face {
+  font-family:"Dana";
+  font-weight:300;
+  src: url(../font/Dana-Light.ttf) format("truetype");
+}
+@font-face {
+  font-family:"Dana";
+  font-weight:400;
+  src: url(../font/Dana-Regular.ttf) format("truetype"),
+  url(../font/Dana-Regular.woff) format("woff"),
+  url(../font/Dana-Regular.woff2) format("woff2");
+}
+@font-face {
+  font-family:"Dana";
+  font-weight:500;
+  src: url(../font/Dana-Medium.ttf) format("truetype");
+}
+@font-face {
+  font-family:"Dana";
+  font-weight:700;
+  src: url(../font/Dana-Bold.ttf) format("truetype"),
+  url(../font/Dana-Bold.woff) format("woff"),
+  url(../font/Dana-Bold.woff2) format("woff2");
+}
 body {
+  font-family: Dana !important;
     background-color: #101010 !important;
     height: 100vh;
     display: flex;
