--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body>.container {
     width: 80%;
     justify-items: center;
     background-color: rgb(36, 36, 46);
+    background-image: url(../images/4652.jpg);
     border-radius: 12px;
     padding: 20px;
     border: 1px solid rgb(41, 41, 43);
@@ -47,7 +48,8 @@ body>.container {
     overflow-wrap: break-word;
   }
 .mytab{
-    background-color:rgb(31, 31, 39) ;
+    background:hsla(0, 0%, 100%, 0);
+    backdrop-filter:blur(6px);
     color: #fff;
     position: absolute;
     top: 14px;
