--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,9 @@ body>.container {
     height: 90%;
     width: 80%;
     justify-items: center;
-    background-color: rgb(36, 36, 46);
-    background-image: url(../images/4652.jpg);
+    background-image: url(../images/backg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 12px;
     padding: 20px;
     border: 1px solid rgb(41, 41, 43);
@@ -49,7 +50,7 @@ body>.container {
   }
 .mytab{
     background:hsla(0, 0%, 100%, 0);
-    backdrop-filter:blur(6px);
+    backdrop-filter:blur(5px);
     color: #fff;
     position: absolute;
     top: 14px;
@@ -119,7 +120,7 @@ input:not(:placeholder-shown) + .mylabel {
     font-size: 12px;
     color: #fff;
     border-radius: 4px;
-    background-color:rgb(31, 31, 39);
+    background-color:rgb(16, 16, 41);
   }
 textarea:focus + .mylabel,
 textarea:not(:placeholder-shown) + .mylabel {
